--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(Windows Debug) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/Debug/application.exe",
+            "program": "${workspaceFolder}/bin/Debug/DungeonOfOblivion.exe",
             "args": [],
             "stopAtEntry": false,
             "environment": [],
